--- a/TwinCAT HMI Project IMD/Server/Extensions/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/TwinCAT HMI Project IMD/Server/Extensions/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -15950,7 +15950,7 @@
                 "USERGROUPUSERS_GROUPS": [
                     "TestUserGroup"
                 ],
-                "USERGROUPUSERS_LOCALE": "en"
+                "USERGROUPUSERS_LOCALE": "nl-NL"
             },
             "Guest": {
                 "USERGROUPUSERS_AUTO_LOGOFF": "P30D",
