--- a/TwinCAT HMI Project IMD/Properties/tchmipublish.config.json
+++ b/TwinCAT HMI Project IMD/Properties/tchmipublish.config.json
@@ -1,6 +1,32 @@
 ﻿[
   {
     "isNew": false,
+    "profileName": "IPCTest",
+    "publishMode": "TcHmi",
+    "targetDirectory": "",
+    "server": null,
+    "sitePath": null,
+    "destinationUrl": null,
+    "passiveMode": true,
+    "savePassword": true,
+    "deleteAllFilesBeforePublish": true,
+    "deleteExtensionDataBeforePublish": true,
+    "abortOnErrors": true,
+    "userName": null,
+    "encryptedPassword": null,
+    "tcHmiServerHost": "localhost",
+    "tcHmiServerPort": "1020",
+    "socketTimeout": "45",
+    "tcHmiUseTLS": true,
+    "tcHmiServerUserName": "__SystemAdministrator",
+    "encryptedTcHmiServerPassword": "j65iE1GnjsLaJ2fT7ps3CQ==",
+    "tcHmiDestinationUrl": "https://localhost:1020",
+    "publishConfiguration": "IPCTest",
+    "tcHmiSavePassword": true,
+    "tcHmiIgnoreCertificateErrors": true
+  },
+  {
+    "isNew": false,
     "profileName": "TestProfile",
     "publishMode": "TcHmi",
     "targetDirectory": "",
@@ -14,13 +40,13 @@
     "abortOnErrors": true,
     "userName": null,
     "encryptedPassword": null,
-    "tcHmiServerHost": "127.0.0.1",
+    "tcHmiServerHost": "localhost",
     "tcHmiServerPort": "1020",
     "socketTimeout": "45",
     "tcHmiUseTLS": true,
     "tcHmiServerUserName": "__SystemAdministrator",
     "encryptedTcHmiServerPassword": "j65iE1GnjsLaJ2fT7ps3CQ==",
-    "tcHmiDestinationUrl": "https://127.0.0.1:1020",
+    "tcHmiDestinationUrl": "https://localhost:1020",
     "publishConfiguration": "remote",
     "tcHmiSavePassword": true,
     "tcHmiIgnoreCertificateErrors": true
