Modified Calculator control to work on button finished instead of pressed, because of bug on mobile devices

--- a/TwinCAT HMI Project IMD/Properties/tchmipublish.config.json
+++ b/TwinCAT HMI Project IMD/Properties/tchmipublish.config.json
@@ -14,13 +14,13 @@
     "abortOnErrors": true,
     "userName": null,
     "encryptedPassword": null,
-    "tcHmiServerHost": "localhost",
-    "tcHmiServerPort": "1020",
+    "tcHmiServerHost": "192.168.11.40",
+    "tcHmiServerPort": "1010",
     "socketTimeout": "45",
-    "tcHmiUseTLS": true,
+    "tcHmiUseTLS": false,
     "tcHmiServerUserName": "__SystemAdministrator",
-    "encryptedTcHmiServerPassword": "j65iE1GnjsLaJ2fT7ps3CQ==",
-    "tcHmiDestinationUrl": "https://localhost:1020",
+    "encryptedTcHmiServerPassword": "u7tQ391GHl6eTdDc8vNaCA==",
+    "tcHmiDestinationUrl": "http://192.168.11.40:1010",
     "publishConfiguration": "IPCTest",
     "tcHmiSavePassword": true,
     "tcHmiIgnoreCertificateErrors": true
