--- a/TwinCAT HMI Project IMD/Server/Extensions/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/TwinCAT HMI Project IMD/Server/Extensions/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -5721,7 +5721,7 @@
             "USEMAPPING": true
         },
         "PLC1.MAIN.InMoldDrying.sCycleStateText": {
-            "ACCESS": 2,
+            "ACCESS": 3,
             "CUSTOMERDATA": "",
             "DOMAIN": "ADS",
             "MAPPING": "PLC1::MAIN::InMoldDrying::sCycleStateText",
@@ -15880,12 +15880,10 @@
     "THREADPOOLSIZE": 12,
     "UPLOADTIMEOUT": "PT5S",
     "USERGROUPS": {
-        "TestUserGroup": {
+        "Admin": {
             "ENABLED": true,
             "FILEACCESS": 3,
-            "FILES": {
-                "/Content/Alarms.content": 0
-            },
+            "FILES": {},
             "SYMBOLACCESS": 3,
             "SYMBOLS": {
                 "IsAuthRequired": 3,
@@ -15893,12 +15891,38 @@
                 "Login": 3
             }
         },
+        "Guest": {
+            "ENABLED": true,
+            "FILEACCESS": 1,
+            "FILES": {},
+            "SYMBOLACCESS": 1,
+            "SYMBOLS": {
+                "IsAuthRequired": 3,
+                "ListUsers": 3,
+                "Login": 3
+            }
+        },
+        "User": {
+            "ENABLED": true,
+            "FILEACCESS": 1,
+            "FILES": {},
+            "SYMBOLACCESS": 3,
+            "SYMBOLS": {
+                "IsAuthRequired": 3,
+                "ListUsers": 3,
+                "Login": 3,
+                "TcHmiUserManagement.ListSymbols": 1,
+                "TcHmiUserManagement.ListUsers": 1
+            }
+        },
         "__SystemAdministrators": {
             "ENABLED": true,
             "FILEACCESS": 3,
             "FILES": {},
             "SYMBOLACCESS": 3,
-            "SYMBOLS": {}
+            "SYMBOLS": {
+                "PLC1.MAIN.InMoldDrying.sCycleStateText": 3
+            }
         },
         "__SystemGuests": {
             "ENABLED": true,
@@ -15912,7 +15936,8 @@
                 "ListDomains": 3,
                 "ListUserNames": 3,
                 "Login": 3,
-                "Logout": 3
+                "Logout": 3,
+                "PLC1.MAIN.InMoldDrying.sCycleStateText": 0
             }
         },
         "__SystemUsers": {
@@ -15939,6 +15964,8 @@
                 "LocalizeText": 3,
                 "Login": 3,
                 "Logout": 3,
+                "PLC1.MAIN.InMoldDrying.sCycleStateText": 1,
+                "PLC1.MAIN.ProductPar.InMoldDrying.TopMoldA.PositionDownOpen": 1,
                 "SetLocale": 3,
                 "SubscribeEvents": 3,
                 "TcHmiSqliteHistorize.GetTrendLineData": 3,
@@ -15955,51 +15982,26 @@
     },
     "USERGROUPUSERS": {
         "TcHmiUserManagement": {
-            "CreatedFromHMI": {
-                "USERGROUPUSERS_AUTO_LOGOFF": "P30D",
-                "USERGROUPUSERS_GROUPS": [
-                    "TestUserGroup"
-                ],
-                "USERGROUPUSERS_LOCALE": "nl-NL"
-            },
-            "Persistent": {
-                "USERGROUPUSERS_AUTO_LOGOFF": "P30D",
-                "USERGROUPUSERS_GROUPS": [
-                    "TestUserGroup"
-                ],
-                "USERGROUPUSERS_LOCALE": "nl-NL"
-            },
-            "TestGroupAndAdminGroup": {
+            "Admin": {
                 "USERGROUPUSERS_AUTO_LOGOFF": "PT1H",
                 "USERGROUPUSERS_GROUPS": [
-                    "TestUserGroup",
-                    "__SystemAdministrators"
+                    "Admin"
                 ],
                 "USERGROUPUSERS_LOCALE": "en-US"
             },
-            "TestGroupAndGuestGroup": {
+            "Guest": {
                 "USERGROUPUSERS_AUTO_LOGOFF": "PT1H",
                 "USERGROUPUSERS_GROUPS": [
-                    "TestUserGroup",
-                    "__SystemGuests"
-                ],
-                "USERGROUPUSERS_LOCALE": "en-US"
-            },
-            "TestGroupAndUserGroup": {
-                "USERGROUPUSERS_AUTO_LOGOFF": "PT1H",
-                "USERGROUPUSERS_GROUPS": [
-                    "__SystemUsers",
-                    "TestUserGroup"
-                ],
-                "USERGROUPUSERS_LOCALE": "en-US"
-            },
-            "TestUser": {
-                "USERGROUPUSERS_AUTO_LOGOFF": "PT15M",
-                "USERGROUPUSERS_GROUPS": [
-                    "__SystemUsers",
-                    "TestUserGroup"
+                    "Guest"
                 ],
                 "USERGROUPUSERS_LOCALE": "nl-NL"
+            },
+            "User": {
+                "USERGROUPUSERS_AUTO_LOGOFF": "PT1H",
+                "USERGROUPUSERS_GROUPS": [
+                    "User"
+                ],
+                "USERGROUPUSERS_LOCALE": "en-US"
             },
             "__SystemAdministrator": {
                 "USERGROUPUSERS_AUTO_LOGOFF": "P30D",
