Properly categorised Parameters for usercontrols

--- a/TwinCAT HMI Project IMD/Properties/tchmipublish.config.json
+++ b/TwinCAT HMI Project IMD/Properties/tchmipublish.config.json
@@ -15,12 +15,12 @@
     "userName": null,
     "encryptedPassword": null,
     "tcHmiServerHost": "192.168.11.40",
-    "tcHmiServerPort": "1010",
+    "tcHmiServerPort": "1020",
     "socketTimeout": "45",
-    "tcHmiUseTLS": false,
+    "tcHmiUseTLS": true,
     "tcHmiServerUserName": "__SystemAdministrator",
     "encryptedTcHmiServerPassword": "u7tQ391GHl6eTdDc8vNaCA==",
-    "tcHmiDestinationUrl": "http://192.168.11.40:1010",
+    "tcHmiDestinationUrl": "https://192.168.11.40:1020",
     "publishConfiguration": "IPCTest",
     "tcHmiSavePassword": true,
     "tcHmiIgnoreCertificateErrors": true
